# cover

./: Cargo.toml  README.md  deny.toml  test_policy_verification.sh
.github/workflows/: ci.yml
src/lib/: authority.rs  corim.rs  ect.rs  keystore.rs  lib.rs  policy.rs  preamble.rego  result.rs  scheme.rs  util.rs  verifier.rs
src/lib/cca/: mod.rs  platform.rego  realm.rego
test/corim/: corim-cca-ref-plat.json  corim-cca-ref-realm.json  corim-cca-ta.json  key.bad.pem  key.priv.pem  key.pub.pem  meta.json  rebuild.sh  signed-corim-cca-ref-plat.cbor  signed-corim-cca-ref-realm.cbor  signed-corim-cca-ta.cbor
test/keys/: pkey_256.json  pkey_256.pem  pkey_384.json  pkey_384.pem  pkey_521.json  pkey_521.pem
test/policy/added-claims/: appraisal.json  policy.rego
test/policy/cca-platform/: appraisal.json  input.json  policy.rego
test/policy/cca-realm/: appraisal.json  input.json  policy.rego
test/policy/empty/: appraisal.json
